@@ -354,6 +354,16 @@
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                             </jvmArgs>
                         </launcher>
+                        <launcher>
+                            <id>SolrImporter</id>
+                            <mainClass>org.dbpedia.extraction.scripts.SolrLoader</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms4G</jvmArg>
+                                <jvmArg>-Xmx8G</jvmArg>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
                     </launchers>
                 </configuration>
             </plugin>
